# TB-AMR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
apps/: CMakeLists.txt  GLFWDistribP4estWindow.h  GLFWDistribTAMRWindow.cpp  GLFWDistribTAMRWindow.h  Utils.h  dataImporter.cpp  dataImporter.h  exajetImporter.cpp  exajetImporter.h  ospRaw2Octree.cpp  p4estViewer.cpp  tamrDistributedViewer.cpp  tamrIsoViewer.cpp  tamrViewer.cpp
apps/loader/: meshloader.cpp  meshloader.h  vtkPolyData_Loader.h
apps/scripts/: exajet.sh  gen_octree_exajet.sh  gen_octree_synthetic.sh  octGenChombo.sh  octGenExajet.sh  octGenLanding.sh  octGenP4est.sh  p4est.sh  runExajet.sh  runP4est.sh  runSynthetic.sh  runTAMR.sh  run_exajet.sh  run_synthetic.sh  synthetic.sh
apps/widgets/: transfer_function_widget.cpp  transfer_function_widget.h
data/: multi_tree_example
data/cube_no_variable/: p4est-01  p4est-02  p4est-03  p4est-03.info  p4est-04  p4est-05  p4est-06
data/cube_with_fe_data/: p4est-withdata-01  p4est-withdata-03  p4est-withdata-06  p4est-withdata-06.info
data/mandel1/: p4est-viz-01.p4est  p4est-viz-01.p4est.info  p4est-viz-02.p4est  p4est-viz-03.p4est  p4est-viz-04.p4est  p4est-viz-05.p4est
data/sphere_with_fe_data/: p4est-withdata-01  p4est-withdata-02  p4est-withdata-02.info  p4est-withdata-03  p4est-withdata-04  p4est-withdata-05
data/testcube/: p4est-viz-01.p4est  p4est-viz-02.p4est  p4est-viz-03.p4est  p4est-viz-04.p4est  p4est-viz-05.p4est
deal-mesh-maker/: CMakeLists.txt  maker.cc
example_code/load_save_test/: .gitignore  load_save_test.c  loadsave_test  makefile  tags
example_code/p4est_step1/: .gitignore  compile_commands.json  makefile
example_code/p4est_step3/: .gitignore  makefile  p8est_step3.c
example_code/p4est_traversal_test/: .gitignore  gen_compile_database.sh  makefile  p4est_step1.c  p4est_traversal_test.c
ospray/: CMakeLists.txt  DataQueryCallBack.h  FindCell.ih  FindDualCell.ih  FindDualCell.ispc  GLFWDistribP4estWindow.cpp  GLFWDistribP4estWindow.h  Octant.ih  P4estVolume.cpp  P4estVolume.h  P4estVolume.ih  P4estVolume.ispc  TAMRVolume.cpp  TAMRVolume.h  TAMRVolume.ih  TAMRVolume.ispc  TAMRVolumeIntegrate.ih  TAMRVolumeIntegrate.ispc  VoxelOctree.cpp  VoxelOctree.h  VoxelOctree.ih  exajetImporter.cpp  exajetImporter.h  filter_current.ispc  filter_finest.ispc  filter_nearest.ispc  filter_octant.ispc  filter_trilinear.ispc  octant_stitch.ih  p4estDistributedViewer.cpp  p4estViewer.cpp  range.ih
ospray/Utils/: parallel_scan.h
ospray/cmake/: Findp4est.cmake
ospray/isosurface/geometry/: Bezier.h  Bezier.ih  Hermite.ih  Impi.cpp  Impi.h  Impi.ispc  Polynomial.ih  Voxel.ih
ospray/isosurface/voxelSources/segmented/: SegmentedVolume.h
ospray/isosurface/voxelSources/structured/: SegmentedVolumeSource.cpp  SegmentedVolumeSource.h  StructuredVolumeSource.cpp  StructuredVolumeSource.h  Volume.cpp  Volume.h
ospray/isosurface/voxelSources/testCase/: TestAMR.cpp  TestAMR.h  TestOctant.cpp  TestOctant.h  TestTAMR.cpp  TestTAMR.h  TestVoxel.h  compute_voxels.ispc
p4est_example1/: .gitignore  makefile  p8est_step1.c
